Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -17,7 +17,7 @@
  CONFIRM_SLACKEN:0 "募集基準の緩和を確認"
  SLACK_TEXT:0 "我々は$MP|Y$の人的資源を得ますが、我々の軍熟練度は$DROP|R$低下します。"
  CANT_SLACKEN_TOO_LOW:0 "我々は募集基準を緩和するには軍熟練度が低すぎます。最初に、少なくとも$NEED|Y$の軍熟練度が必要です。"
- PIETY_TOO_LOW_FOR_LEGALISM:1 "§Y篤い信心の強制§!を実行するには、我々は少なくとも$NEED|Y$の律法主義が必要です。これは汚職に$CORRUPTION$の影響があります。"
+ PIETY_TOO_LOW_FOR_LEGALISM:1 "「§Y篤い信心の強制§!」を実行するには、我々は少なくとも$NEED|Y$の律法主義が必要です。これは汚職に$CORRUPTION$の影響があります。"
  PIETY_LEGALISM_BONUS:1 "我々の律法主義の伝統は大きな強みです。§Y篤い信心の強制§!を実施すると、神秘主義へと$COST|Y$動きますが、汚職が$CORRUPTION$減少します。"
  PIETY_TOO_HI_FOR_MYSTICISM:1 "「§Y信者の招集§!」を実行するには、少なくとも$NEED|Y$の神秘主義が必要です。これは我々に以下の影響を与えます：\n$GAIN$"
  PIETY_MYSTICISM_BONUS:1 "我々の神秘主義の伝統は大きな強みです。§Y信者の招集§!を実施すると、律法主義へと$COST|Y$動きますが、$GAIN$"
@@ -479,7 +479,7 @@
  NOT_CREATED:0 "§g未作成§!"
  EMBRACEMENT_RATIO:0 "全$NUM_PROVINCES$州中$NUM_EMBRACED|Y$州で採用しており、$COUNTRY_ADJ$の開発（自治率により$TOTAL_DEV|Y$）合計の$VAL|Y$です。"
  EMBRACE_RATIO2:0 "次の州では$NAME$を採用しておらず、追加コストが発生しています：\n"
- EMBRACE_RATIO_PROV:0 " $PROV$ $COST|Y$¤（開発値$DEV$）\n"
+ EMBRACE_RATIO_PROV:0 " $PROV$ $COST|Y$¤（開発度$DEV$）\n"
  EMBRACE_RATIO3:0 "（その他$NUM$州から$COST|Y$¤のコスト）\n"
  PRESENCE_IN_COUNTRY:0 "$NAME$における存在"
  HAS_EMBRACED:0 "$INSTITUTION|Y$を採用しています"
@@ -509,7 +509,7 @@
  GP_NAME_TT:0 "$WHO|Y$は$WHERE|Y$の列強国です。"
  GP_MINOR_NAME_TT:0 "$WHO|Y$は$WHERE|Y$の非列強国です。"
  GP_RANK_TT:0 "最大$MAX|Y$の列強国が常に存在します。"
- GP_RATING_TT:0 "列強スコアは§Y開発§!を現在の§Y技術コスト§!で割ったものです。"
+ GP_RATING_TT:0 "列強スコアは§Y開発度§!を現在の§Y技術コスト§!で割ったものです。"
  GP_TECH_TT:0 "技術コストは次から影響を受けます：\n"
  TRADE_COMPANY_PENALTY:0 "$EFFECT$の影響は$DATE|Y$まで続きます"
  left_trade_company:0 "交易会社を離れる"
@@ -569,7 +569,7 @@
  GOLD_DEPLETE_WARNING:1 "§Rこの州の§Y$PROD$§!の生産量の増加により§!§R、鉱山が枯渇し、生産量が半減する可能性が§!§Y$CHANCE$%§!§Rあります。§!\n\n"
  GOLD_DEPLETE_CHANCE:0 "$PROD|Y$の基本生産では、鉱山が枯渇し、生産量が半減する可能性が§R$CHANCE$%§!あります。"
  YEARLY_INC_TXT:0 "（年間 $VAL|Y$¤）"
- LEDGER_TOTAL_DEVELOPMENT:0 "開発"
+ LEDGER_TOTAL_DEVELOPMENT:0 "開発度"
  MODIFIER_IN_COUNTRY:0 "$MODIFIER|Y$"
  MODIFIERS_IN_COUNTRY:0 "$COUNTRY$の補正"
  CANNOT_DECLARE_WAR_FIRST_MONTH:0 "宣戦布告するには、$DATE|Y$まで待たなければなりません。"
@@ -744,7 +744,7 @@
  FORT_MAINTENANCE_LONG:0 "我が国で、要塞レベル毎に毎月かかるコストが幾らかを表しています。"
  provincial_production_size:0 "基本生産"
  DEVELOPMENT_EFFICIENCY:0 "開発効率"
- PP_DEVELOPMENT:0 "§Y開発§!\nこれは税、生産、人的資源の基本値の合計です。現在の開発レベルは以下の効果があります：\n$EFFECT$"
+ PP_DEVELOPMENT:0 "§Y開発度§!\nこれは税、生産、人的資源の基本値の合計です。現在の開発レベルは以下の効果があります：\n$EFFECT$"
  BASE_TAX:1 "基本税"
  BASE_PRODUCTION:0 "基本生産"
  BASE_MANPOWER:0 "基本人的資源"
@@ -759,8 +759,8 @@
  FORT_MAINTENANCE_ECO_IRO_2:0 "$MOTH|Y$の敵の要塞は使用停止されており、我々にコストはかかりません。"
  FORT_MAIN_NONC:0 "維持費は、あなたが金を払う唯一のものなので、あなたが支配する砦でのみ切り替えることができます。"
  FORT_MAIN_SIEGE:0 "州が包囲されているときに、維持費を切り替えることはできません。"
- development:0 "開発"
- development_scaled:0 "開発"
+ development:0 "開発度"
+ development_scaled:0 "開発度"
  DEVELOPMENT_LESS_THAN:0 "開発度が$VAL|Y$未満である\n"
  DEVELOPMENT_AT_LEAST:0 "開発度が$VAL|Y$以上である\n"
  TOTAL_DEVELOPMENT_LESS_THAN:2 "総開発度が$VAL|Y$未満である（現在$CURRENT|0Y$）\n"
@@ -797,7 +797,7 @@
  IMPPR_COLONY:0 "$NAME$はまだ植民地なので、$ACTION|Y$することはできません。"
  IMPPR_NOTCORE:0 "$NAME$はまだ中核州ではないので、$ACTION|Y$することはできません。"
  IMPPR_NOTCORE_SUBJECT:0 "$NAME$は我々の従属国の中核州の一つではないので、まだそこでは$ACTION|Y$することはできません。"
- IMPPR_NOT_ENOUGH_POWER:0 "§R$NAME$での$ACTION$に必要な$POWER|Y$$TYPE$点を持っていません。§!"
+ IMPPR_NOT_ENOUGH_POWER:0 "§R$NAME$での$ACTION$に必要な$POWER|Y$の$TYPE$点を持っていません。§!"
  IMPPR_DO:1 "$NAME$で$TYPE$力$COST|Y$を払って§G+$AMOUNT$§!だけ$ACTION$を行うと、以下の効果が得られます：\n$EFFECT$\n  直轄領：$CROWNLAND|+=&1$"
  IMPROVED_COUNT_TRIGGER_LESS:1 "$VAL|Y$回未満改善されました。\n"
  IMPROVED_COUNT_TRIGGER_AT_LEAST:1 "少なくとも$VAL|Y$回改善されました。\n"
@@ -5009,14 +5009,14 @@
  AVAILABLE_BANNERS_LIMIT:0 "$MAX|Y$の八旗のうち$CURRENT|Y$をすでに徴集しているため、この数は$VAL|Y$に減少します。"
  BLOCK_END_GAME_TAGS:0 "国家形成の制限"
  FE_ENDGAME_TAGS_BLOCKE:1 "ゲームを通じ、グレートブリテンやオスマンのように、ゲームの終盤の国家を1つしか形成できないため、ゲームがやや難しくなります。"
- CONFIRMMAKESTATETEXT_OVER_CAP:0 "Making $NAME$ into a State will cost us $COST|Y$¤ in maintenance every month, while it will increase our income by about $INC|Y$¤ when autonomy has been reduced to lower levels. It will also increase our manpower and sailors from the area.\n\nTurning $NAME$ into a state will use $CAP|Y0$ out of our Governing Capacity bringing it up to a total of $USED_CAP|Y0$.\n§RThis will bring us over our Governing Capacity of $MAX_CAP|Y0$ and incur penalties!"
+ CONFIRMMAKESTATETEXT_OVER_CAP:0 "$NAME$をステートにすることで毎月の維持費は$COST|Y$¤になりますが、自治率が低いレベルに下がった場合には収入が約$INC|Y$¤増加します。また、その地域からの人的資源と水兵も増加します。\n\n$NAME$をステートにすると統治限界のうち$CAP|Y0$を使用し、合計$USED_CAP|Y0$になります。\n§Rこれは$MAX_CAP|Y0$の統治限界になってしまい、ペナルティを発生させてしまうでしょう！"
  APH_NOT_CAPITAL:0 "自国の首都を帝国に追加することはできません、まず帝国に参加しましょう"
  APH_IS_PART_OF_TRADE_COMPANY:0 "$NAME$は交易会社内にあり、神聖ローマ帝国の一部となることはできません。"
  alert_max_monarch_power_reached_instant:0 "§Y君主力が上限に達した！§!"
  alert_max_monarch_power_reached_1_delayed:0 "§Y$POW1$君主力§!が最大値に達しています。"
  alert_max_monarch_power_reached_2_delayed:0 "$POW1|Y$君主力と§Y$POW2$君主力§!が最大値に達しています。"
  alert_max_monarch_power_reached_3_delayed:0 "$POW1|Y$君主力、$POW2|Y$君主力と§Y$POW3$君主力§!が最大値に達しています。"
- AND_X_PROV_MORE:0 "And in $VAL|Y$ more provinces..."
+ AND_X_PROV_MORE:0 "そして、さらに$VAL|Y$州において..."
  PAPAL_CURIA_TREASURY_NOT_ENOUGH:0 "§Rこの行動を取るには少なくとも$COST|Y0$¤の教皇資金が必要です。§!"
  PAPAL_CURIA_TREASURY_COST:0 "教皇資金から$COST|Y0$¤が必要です。\n"
  WHEN_CONQUERED:0 "\nこれはこの州を征服したときに中核化するのにかかるおおよそのコストです：\n"
