--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -111,9 +111,9 @@
  HRE_LEADER_ALWAYS_EMPEROR:0 "皇帝は常に連盟の指導国です。"
  FRONTEND_COUNTRY_DISCLAIMER:0 "§Gこれは近似値です。実際の値はゲーム内の建築物や補正、その他の要素によって異なる場合があります。§!"
  FRONTEND_COUNTRY_PROVINCES:0 "§Y国家規模§!"
- FRONTEND_COUNTRY_PROVINCES_DESC:0 "これは§Y$COUNTRY$§!が保有する州の数です。より多くの州を保有しているほど、潜在的な開発力が高まります。"
+ FRONTEND_COUNTRY_PROVINCES_DESC:0 "これは§Y$COUNTRY$§!が保有する州の数です。より多くの州を保有しているほど、潜在的な開発度が高まります。"
  FRONTEND_COUNTRY_ECONOMY:0 "§Y開発§!"
- FRONTEND_COUNTRY_ECONOMY_DESC:0 "これは§Y$COUNTRY$§!の開発力の総計です。開発力が高いほど、経済や人的資源に良い影響を与えます。"
+ FRONTEND_COUNTRY_ECONOMY_DESC:0 "これは§Y$COUNTRY$§!の開発度の総計です。開発度が高いほど、経済や人的資源に良い影響を与えます。"
  FRONTEND_COUNTRY_FORTS:0 "§Y要塞レベル§!"
  FRONTEND_COUNTRY_FORTS_DESC:0 "これは§Y$COUNTRY$§!の要塞レベルの総計です。要塞レベルが高いほど、他国が侵略するのは難しくなります。"
  WARSCORE_COST_VAL:0 "州の戦勝点コスト：§Y$VALUE$%§!"
