--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -865,7 +865,7 @@
  alert_trade_company_investment_delayed:0 "以下の交易会社投資が出来ます：\n$INVESTMENTS$\n\n§Gクリックすると交易会社地域を順に見ることが出来ます§!"
  POSSIBLE_TRADE_COMPANY_INVESTMENT:0 "$AREA_COUNT$$AREA$に$INVESTMENT|Y$"
  PART_OF_TRADE_COMPANY:0 "$PROV|Y$は$NAME|Y$交易会社の一部です"
- CHARTER_DEVELOPMENT_RELUCTANCE:1 "州の開発："
+ CHARTER_DEVELOPMENT_RELUCTANCE:1 "州の開発度："
  TRADE_COMPANY_COUNTRY_MODIFIER_NAME:0 "$CHARTER|Y$ への投資 $INVESTMENT|Y$"
  PLAYING_WITH_NATION_SETUP:0 "プレーする国家の設定："
  NOT_PLAYING_WITH_NATION_SETUP:0 "現在プレーしている国家の設定："
