--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -379,7 +379,7 @@
  CURIA_BUY_INDULGENCE_ALREADY_BOUGHT:0 "§Rあなたはすでに罪のために免罪符を購入しており、現時点ではいかなる量の金も教皇の心を変えることはできません。§!"
  CURIA_BUY_INDULGENCE_NOT_ENOUGH_MONEY:0 "§R免罪符の購入には$COST|Y$¤が必要ですが、あなたは$AVAILABLE|Y$¤しか持っていません§!"
  EXCOM_TARGET_BOUGHT_INDULGENCE:0 "§R目標は罪のために免罪符を購入しました、あなたは今彼を破門することはできません。§!"
- EXCOMM_INDULG:1 "This will remove our excommunication, and any nations we are in a union with!"
+ EXCOMM_INDULG:1 "これは自国及び全ての自国の同君連合国の破門を取り消してくれるでしょう！"
  bought_Indulgence:0 "免罪符を購入した"
  APPOINT_CARDINAL_COST_WHY:0 "以下の理由によりこの枢機卿の任命には$VAL|2Y$¤が必要です：\n$WHY$"
  CARDINAL_BASE_COST:0 "基本コスト：$VAL|+=$¤\n"
@@ -486,7 +486,7 @@
  MAPMODE_REVOLUTION_DESC:1 "これは革命の広がりと影響を示しています。革命目標は紫色で表示され、他の革命国は緑、黄色から赤は非革命国であり、その州が革命によってどれほどひどく影響を受けているかを示しています。"
  COUNTRY_CAN_EMBRACE_REVOLUTION:0 "我々は革命を受け入れた！武器を取れ、市民らよ！"
  COUNTRY_CANNOT_EMBRACE_REVOLUTION_IS_REVOLUTIONARY:0 "我々はすでに革命派だ！国王に死を！"
- COUNTRY_CANNOT_EMBRACE_REVOLUTION_MIN_DEV:1 "$COUNTRY|Y$ is too weak to claim the mantle of the Revolution. We need at least $MINDEV|Y$ Development and we only have $DEV|Y$."
+ COUNTRY_CANNOT_EMBRACE_REVOLUTION_MIN_DEV:1 "$COUNTRY|Y$は弱すぎて革命の外套を獲得できません。最低$MINDEV|Y$の開発度が必要であり、私たちは$DEV|Y$しか持ってません。"
  COUNTRY_CANNOT_EMBRACE_REVOLUTION_NO_SPREAD:0 "革命思想は$COUNTRY|Y$ではそれを受容できるほど広く普及していません。§Y$REQUIRED$%§!が必要ですが§Y$SPREAD$%§!しかありません。"
  COUNTRY_CANNOT_EMBRACE_REVOLUTION_NOT_AGAIN:0 "革命は我が国に深い傷跡を残しています。我々はもう二度と受け入れることはないでしょう。"
  COUNTRY_CANNOT_EMBRACE_REVOLUTION_CELESTIAL_EMPIRE:0 "革命は、天命が支持するすべてに反対しています。中華皇帝がそれを受け入れることはないでしょう。"
@@ -503,7 +503,7 @@
  alert_can_embrace_revolution_delayed:0 "我が国では革命思想が十分に広がっており、人々は王や暴君に立ち向かう準備ができています。 我々は今、革命を受け入れることができます！"
  SPREAD_REVOLUTION_TREATY_NAME:0 "革命の広がり"
  SPREAD_REVOLUTION_TREATY_DESC:0 "革命思想は$CONTINENT|Y$の全ての$GIVER_ADJECTIVE|Y$の州に広がります。$TAKER|Y$は各君主力の$POWER|G$を獲得し、$GIVER|Y$は各君主力の$POWER|R$を失います。"
- PEACE_OPTION_ONLY_REV_TARGET:1 "Only The Home of the Revolution, the Revolutionary Target can demand this peace option. Only they can spread the true revolution!"
+ PEACE_OPTION_ONLY_REV_TARGET:1 "革命発祥地、革命目標だけがこの和平選択肢を要求できます。彼らだけが真の革命を広めることができるのです！"
  PEACE_OPTION_REQUIRES_PROVINCES_TO_SPREAD:0 "革命を広めることのできる州は残っていません。"
  spread_revolution_to_enemy:0 "$TARGET$への革命の広がり"
  spread_revolution_to_us:0 "$TARGET$は革命を我々の州に広げている"
@@ -558,7 +558,7 @@
  dei_gratia_rex_DESC:2 "彼らの心の中で、あらゆる忠実な人々は、神が最終的に我々の統治者を選択したことを理解しており、したがって、彼らは彼の恵みと彼の言葉によって支配する。"
  illius_qui_se_pro_divini:0 "神にその身を捧ぐ"
  illius_qui_se_pro_divini_DESC:1 "キリストの兵士たちは再び聖地の岸辺に血を流さなければならない。十字軍の精神はよみがえらなければならない、なぜなら、神がそれを望まれるからだ！"
- crusades_after_age_limit:0 "Crusades after age limit"
+ crusades_after_age_limit:0 "時代制限後の十字軍"
  praeclara_carissimi:1 "キリスト教徒の献身"
  praeclara_carissimi_DESC:1 "良いキリスト教徒として、我々は模範を示さなければならない。ユダヤ教徒や他の不信者を我らが領地に招き、キリスト教統治の恩恵を見せ、主の存在を受け入れさせるのだ。"
  CURIA_TREASURY_LESS_THAN:0 "教皇資金が$CASH|Y$¤未満である"
@@ -686,9 +686,9 @@
  ESTATE_PRIVILEGE_PENALTIES:0 "この特権には以下のペナルティがあります：\n$MODIFIERS$\n\n"
  PROVINCE_PRODUCE_PLU:0 "$PROVINCE$は$GOODS$を生産している"
  PROVINCE_DONT_PRODUCE_PLU:0 "$PROVINCE$は$GOODS$を生産していない"
- EST_INWARD_PERFECTION_OFFENSIVE_WAR:0 "Expansionist War with Inwards Perfection:"
+ EST_INWARD_PERFECTION_OFFENSIVE_WAR:0 "内的爛熟を伴う拡張主義戦争："
  MODIFIER_STABILITY_COST_TO_DECLAR_WAR:0 "宣戦布告による安定度への打撃"
- MODIFIER_DISENGAGEMENT_CHANCE:0 "Ship Disengagement Chance"
+ MODIFIER_DISENGAGEMENT_CHANCE:0 "艦船撤退確率"
  ESTATE_LOYALTY_VS_INFLUENCE_GREATER_THAN:0 "§Y$ESTATE$§Wの忠誠度が彼らの影響力以上である。"
  ESTATE_LOYALTY_VS_INFLUENCE_NOT_GREATER_THAN:0 "§Y$ESTATE$§Wの忠誠度が彼らの影響力未満である。"
  ALERT_UNCONTESTED_CLAIMS_ENTRY:0 "$PROV$：$EXPIRES|Y$\n"
@@ -711,7 +711,7 @@
  STATE_INCOME:0 "$STATE|Y$の収入：$INCOME|G$\n"
  STATE_MAINTENANCE:0 "$STATE|Y$の維持費：$MAINTENANCE|R$"
  BENEFIT_FOR_PROVINCE:0 "帝国の州が以下を得る：\n$MODIFIER$"
- emperor_per_prince_modifier:0 "Per Prince in Empire"
+ emperor_per_prince_modifier:0 "帝国内の諸侯ごと"
  gemeinerpfennig_emperor_per_prince:0 "諸侯からの一般帝国税"
  hre_event.7.t:0 "[From.GetCapitalName]の永続的帝国議会"
  hre_event.7.d:0 "今日以降、帝国議会は以前のように臨時に開かれるものではなく、[From.GetCapitalName]の都市において恒久的な会期に入る。この段階により、帝国の結束は確実に高まり、皇帝と諸侯の間の関係を正式なものにするのに有用だ。一方、それはまた、[From.GetCapitalName]を帝国を傷つけることを望む者にとっての主要な目標にする…"
@@ -752,14 +752,14 @@
  EDICT:0 "布告"
  ADMINISTRATION:0 "統治"
  UNKNOWN_LOC:0 "州"
- UNLAWFUL_TERRITORY_HAS_OVERLORD:0 "§R$COUNTRY|Y$ is a §YVassal§! of $OVERLORD|Y$, who has sovereignty over their territory.§!\n"
+ UNLAWFUL_TERRITORY_HAS_OVERLORD:0 "§R$COUNTRY|Y$は$OVERLORD|Y$の§Y従属国§!で、$OVERLORD|Y$が$COUNTRY|Y$の領土主権を有しています。§!\n"
  MERCENARY_COMPANY_BUILD_COST:0 "これには$COST|Y$¤のコストと$TIME|Y$日間がかかります。"
  HIRE_MERCENARY_COMPANY:0 "$PROVINCE|Y$で$COMPANY|Y$を雇用する\n"
  MACRO_MASS_BUILD_UNITS:0 "§YShift + 左クリック§!で5の$TYPE$連隊を作ります。\n§YCtrl + 左クリック§!で10の$TYPE$連隊を作ります。"
  USE_CURIA_TREASURY:0 "教皇資金を使う"
  CURIA_TREASURY_NOT_CURIA_CONTROLLER:0 "§R教皇資金を使用できるのは教皇の支配者だけです！§!"
  USE_CURIA_TREASURY_DESC:0 "教皇の支配者として、あなたは教皇資金を使用できます。"
- REFORM_DESIRE_SCALE_EFFECT:0 "Reform Desire will grow $PERC|%-0$ $DIRECTION$.\n"
+ REFORM_DESIRE_SCALE_EFFECT:0 "改革欲求は$PERC|%-0$$DIRECTION$成長します。\n"
  REFORM_DESIRE_SCALE_TOOLTIP:0 "改革者を動揺させた我々の行動により、§Y改革欲求§!の成長が$SCALE|%-0$加速します。"
  investigate_heresy:0 "異端の調査"
  MIL_CONST_MERCENARY_TIP:0 "$MERC|Y$は$DATE|Y$にここに出現するでしょう。"
@@ -774,7 +774,7 @@
  REVOLUTIONARY_GUARD_REGIMENT:0 "革命衛兵連隊\n$EFFECT$"
  REGCAT_revolutionary_guard:0 "革命衛兵"
  REVOLUTIONARY_GUARD_DESC:0 "革命衛兵はあなたの軍の精鋭の連隊です。彼らは受けるダメージがより少なく、より素早く訓練できますが、維持費ははるかに高価です。"
- BUILD_SPECIAL_UNIT_TOOLTIP:0 "$CATEGORY$ $TYPE$\n"
+ BUILD_SPECIAL_UNIT_TOOLTIP:0 "$CATEGORY$$TYPE$\n"
  JANISSARY_NAME:0 "$HOME$第$NUM$$ORDER$イェニチェリ隊"
  REVOLUTIONARY_GUARD_NAME:0 "$HOME$第$NUM$$ORDER$衛兵"
  PRIVILEGE_NO_LONGER_VALID_TITLE:0 "階級特権の変更"
@@ -891,8 +891,8 @@
  ESTATE_PRIVILEGE_NO_MODIFIERS:0 "§Y補正：§!\nこれ以上の補正はありません。"
  ESTATE_PRIVILEGE_NO_EFFECTS:0 "§Y効果：§!\n付与による効果はありません。"
  LEADER_NAME_GREEN:0 "$NAME|G$"
- TRADE_COMPANY_MOD:0 " & Base is $MOD|2Y$"
- TRADE_COMPANY_INST_VALUE:0 " x $NAME|Y$ $VAL|G2%$"
+ TRADE_COMPANY_MOD:0 "そして、ベースは$MOD|2Y$"
+ TRADE_COMPANY_INST_VALUE:0 "x$NAME|Y$$VAL|G2%$"
  TRADE_COMPANY_IMPACT_ENTRY:0 "$OWNER$：$IMPACT|+=2%$ = ($SHARE|Y%$ £icon_trade_power£$INST_EFF$$MOD$)\n"
  trade_company_bonus:0 "交易会社"
  emperor_reichsreform_title:0 "帝国改革への呼びかけ"
@@ -995,7 +995,7 @@
  REICHSKRIEG_DEFENSE_OF_REALM_MODIFIER:0 "皇帝と選帝侯は神聖ローマ帝国の敵との戦争の際に、戦争税を無料で徴収できるようになります"
  defense_of_the_empire_modifier:0 "帝国の防衛"
  mechanic_blocked_call_diet_yes:0 "国会を解散する"
- mechanic_blocked_call_diet:0 "Disabled Diet"
+ mechanic_blocked_call_diet:0 "解散された国会"
  PICK_HOTKEY_BUTTON_HINT:0 "任意のボタンをクリックしてショートカットを変更します。"
  ASSIGN_HOTKEY_TITLE:0 "ショートカットキーの割り当て"
  HOTKEY_DESC:0 "キーを押してボタンに割り当てます。(現在のショートカット：$CURRENT|Y$)"
