--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -91,7 +91,7 @@
  flavor_bav.2.d:0 "我々の一族である[KOL.Monarch.GetName]がケルン大司教に任命された。このことはバイエルンの影響のもとでの新時代を意味する。"
  flavor_bav.2.a:0 "素晴らしい！"
  flavor_bav.3.t:0 "ハプスブルク家のライバル"
- flavor_bav.3.d:0 "オーストリアのハプスブルク家の発展は、彼らが領地を強化し、帝国の玉座に一族を座らせていることを見せつけられるという意味で、我々にとって悩みの種だ。我々が玉座にヴィッテルスバッハ家の一族を迎えてから1世紀以上が経過しており、このことは急ぎ改善しなければならない。ハプスブルク伯への異議申し立ては常に最優先事項でなければならない！"
+ flavor_bav.3.d:0 "オーストリアのハプスブルク家の躍進は、彼らが領地を強化し、帝国の玉座に一族を座らせていることを見せつけられるという意味で、我々にとって悩みの種だ。我々が玉座にヴィッテルスバッハ家の一族を迎えてから1世紀以上が経過しており、急ぎ改善しなければならない。ハプスブルク伯への異議申し立ては常に最優先事項でなければならない！"
  flavor_bav.3.a:0 "ヴィッテルスバッハ家のために！"
  flavor_bav.3.b:0 "その価値はあるだろうか？"
  flavor_bav.4.t:0 "バイエルンの歴史家"
