--- a/source/localisation/decisions_l_english.yml
+++ b/source/localisation/decisions_l_english.yml
@@ -118,14 +118,14 @@
  become_russian_principality_desc:0 "我々は、困難な時期に我々を導く強力な指導者を必要としています。我々はボヤールたちを支配する権力を集中し、過去のキエフ大公国の精神で政府を作成してみましょう。"
  abolish_black_army_title:0 "黒軍を廃止"
  abolish_black_army_desc:0 "黒軍は順調な拡張の原動力だったが、同時に貴族から強い反発を受けてきた。金で贖った忠誠心は簡単に失われてしまう。黒軍を解体し、真の忠誠を持って戦う軍隊を組織しなおそう。"
- abolishing_black_army_tooltip:0 "§Y貴族§!は§Y15§!の影響を得ることができます。"
+ abolishing_black_army_tooltip:0 "§Y貴族§!は§Y15§!の影響力を獲得します。"
  capital_in_belgrade_title:0 "ベオグラードへ遷都"
  capital_in_belgrade_desc:0 "ベオグラードはバルカン半島の戦略的、経済的な要地であり、かつてはセルビアの首都でもあった。この偉大な都市に再び遷都し、かつての栄光ある姿を取り戻そう！"
  from_great_yuan_title:0 "大元を再生"
  from_great_yuan_desc:0 "かつてクビライ・ハーンの後継者たちは、中国とモンゴルの全土を支配していた。生まれながらの権利を信じ込んだ他の弱い王族を駆逐し、古き大いなる元の遺産を取り戻そう！"
  subject_all_mongols:2 "すべてのモンゴル、ホルチン、ハルハ、オイラト地域を[Root.GetName]の領土もしくは属国領とする必要があります。"
  custom_tsardom_title:0 "ツァーリ位を請求"
- custom_tsardom_desc:0 "我が公国は覇権国家となった。ツァーリを名乗る時期になったのではないだろうか？"
+ custom_tsardom_desc:0 "我が公国は地上で最も強大な国の一つへと成長した。明らかに我らは他の誰よりもツァーリを名乗る価値があると思うが？"
  yemen_nation_title:0 "イエメンを統一"
  yemen_nation_desc:0 "あまりにも長い間、イエメンの肥沃な大地はただ土地から搾取したいだけの無能な王朝によって苦しめられてきた。今こそ彼らが有能な君主の下で再び繁栄できるよう、この地を統一せねばなるまい。"
  georgia_nation_desc:0 "アレクサンドレ1世の退位以来、グルジアは内戦によって分裂、荒廃した。この隙を突いて他国は我が国の内政に干渉し、我が民たちを虐げてきた。\nしかし今こそグルジアの民は団結し、かつて失われた王国を再建する時だ。"
@@ -160,7 +160,7 @@
  muslim_conversion_to_sikhism_title:0 "シーク教への改宗"
  muslim_conversion_to_sikhism_desc:0 "新しい信仰が我々の土地で広がっている。シーク教は、グル・ナーナクとその後継者の教えに従っており、その言葉はますます多くの我々の国民たちの中で勢いを増している。我々がこの信仰を自身のために採用することで、我々は何世代にもわたってシーク教の運動の支持を得ることだろう。"
  scottish_nation_title:0 "スコットランド国家の形成"
- scottish_nation_desc:0 "スコットランドのかつての誇り高き国家は荒れ果てているが、我々の王国を復元する意志は氏族の中には残ったままだ。我々は勇気を奮い立たせ、自由で独立したスコットランドのために戦うだろう。"
+ scottish_nation_desc:0 "スコットランドのかつての誇り高き国家は荒れ果てているが、我々の王国を復元する意志は氏族の中に残ったままだ。我々は勇気を奮い立たせ、自由で独立したスコットランドのために戦うだろう。"
  sultan_of_delhi_title:0 "デリーのスルタン"
  sultan_of_delhi_desc:0 "かつてのデリーはインド亜大陸の中心であり、我々は多くの点で彼らの伝統を受け継いでいる。\nデリーのスルタンたちの遺産を取り戻し、かつての首都ドアーブから再び亜大陸を支配しよう。"
  nepal_nation_title:0 "ネパールの統一"
