--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
  estate_nobles_land_rights:0 "$ESTATE_NAME$の地権"
  estate_nobles_nobility_primacy:0 "$ESTATE_NAME$の優位性"
- estate_nobles_officer_corp:0 "$ESTATE_NAME$には士官部隊が存在"
+ estate_nobles_officer_corp:0 "士官部隊の$ESTATE_NAME$"
  estate_nobles_levies:0 "徴兵の拡大"
  estate_nobles_advisors:0 "貴族顧問"
  estate_nobles_right_of_counsel:0 "顧問の権利"
  estate_nobles_french_strong_duchies:0 "フランスの強力な大公領"
  estate_church_religious_state:0 "宗教国家"
  estate_church_independent_inquisition:1 "聖職者顧問公会議"
- estate_church_new_world_mission:0 "新世界への伝道を確立する"
+ estate_church_new_world_mission:0 "新世界への伝道確立"
  estate_church_papal_emissary:0 "教皇の使者"
  estate_church_clerical_ministers:0 "聖職者の大臣"
  estate_church_clerical_oversight:0 "$ESTATE_NAME$による監督"
@@ -22,7 +22,7 @@
  estate_cossacks_exploration_expedition:0 "コサック探索遠征隊"
  estate_cossacks_cossack_self_governance:0 "コサックの自治"
  estate_cossacks_establish_the_cossack_regiments:0 "コサック連隊の設立"
- estate_cossacks_expand_the_cossack_regiments:0 "コサックの連隊を拡張"
+ estate_cossacks_expand_the_cossack_regiments:0 "コサック連隊の拡張"
  estate_dhimmi_lighter_dhimmi_taxes:1 "ズィンミー税の増税"
  estate_dhimmi_lighter_dhimmi_taxes_effect_tooltip:2 "領有する全ての非§Yイスラム教§!の州は§Y「ズィンミー税の増税」§!を獲得し、下記の効果を得ます：\n州税収補正: §G15.0%§!"
  estate_dhimmi_lighter_dhimmi_taxes_revoke_effect_tooltip:1 "§Y「ズィンミー税の増税」§!の補正は、領有する全ての非§Yイスラム教§!の州から取り除かれます。"
@@ -205,7 +205,7 @@
  CONDITIONAL_MODIFIER_DESC:0 "条件\n$CONDITIONS$が満たされている時：\n$MODIFIERS$"
  FAILED_ESTATE_AGENDA_TITLE:0 "階級の議題が失敗"
  FAILED_ESTATE_AGENDA_DESC:0 "国家の変更により階級はもはや$NAME|Y$を追求しなくなり、それは以下の影響があります：\n$EFFECT$"
- TIMED_OUT_ESTATE_AGENDA_DESC:0 "You have exhausted your Estate's patience concerning their Agenda $NAME|Y$ which they expected to be completed by $EXPIRY|Y$. This will give you the following effects:\n$EFFECT$"
+ TIMED_OUT_ESTATE_AGENDA_DESC:0 "議題$NAME|Y$の完了見込みは、$EXPIRY|Y$だったのですが、階級はこれ以上我慢できなくなりました。このことにより、以下の効果がもたらされます：\n$EFFECT$"
  LAND_OWNERSHIP_MODIFIER:1 "$PERCENT|Y0&$の地権から獲得：\n$MODIFIERS$\n"
  estate_privilege_cannot_be_revoked:0 "この階級特権は取り消された。"
  estate_burghers_monopoly_of_textiles_effect_tooltip:2 "§R§Y布§!または§Y絹§!からの収入はありません§!"
