--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -151,8 +151,8 @@
  DIPLOMATIC_RELATIONS_AT_LEAST:0 "外交関係が右記以上である："
  FREE_DIPLOMATIC_RELATIONS_LESS_THAN:0 "自由な外交関係が右記未満である："
  FREE_DIPLOMATIC_RELATIONS_AT_LEAST:0 "自由な外交関係が右記以上である："
- CORE_EXPLAIN_LOSE_CULTURE_GROUP_NOLOSE:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!と同じ文化グループです。§Y$PROV$§!を中核州として失うことはない。"
- CORE_EXPLAIN_LOSE_PRIMARY_TAG_NOLOSE:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!の代表的な国です。§Y$PROV$§!を中核州として失うことはない。"
+ CORE_EXPLAIN_LOSE_CULTURE_GROUP_NOLOSE:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!と同じ文化グループです。§Y$PROV$§!を中核州として失うことはありません。"
+ CORE_EXPLAIN_LOSE_PRIMARY_TAG_NOLOSE:0 "§Y$WHO$§!は§Y$PROVCULTURE$§!の代表的な国家です。§Y$PROV$§!を中核州として失うことはありません。"
  HISTORY_DISCOVERED_BY_GROUP:0 "§Y$GROUP$§W圏によって発見されました。"
  WESTERNIZATION_AFFECTS:0 "§Y西洋化の影響：§W"
  SUBJECT_COUNTRY_STARTS:0 "従属国"
