--- a/source/localisation/random_new_world_l_english.yml
+++ b/source/localisation/random_new_world_l_english.yml
@@ -4541,127 +4541,127 @@
  rnw_deseret_adj:0 "デザラシアン"
  p_hallamozheg_adj:0 "ハラモゼーグ"
  desc_atlantean_remnants_modifier:0 "かつて、この全地域は巨大な大陸であり、巨大な大都市が存在した。残っている島はこの大陸の先端に過ぎず、そこから潜水士はこの先進的な文明により残された海に沈んだ遺跡に到達することができる。"
- p_hinengura:0 "Hinengura"
- p_hinengura_adj:0 "Hinenguran"
- l_crystal_lake:0 "Crystal Lake"
+ p_hinengura:0 "ヒネングラ"
+ p_hinengura_adj:0 "ヒネングラ"
+ l_crystal_lake:0 "クリスタル・レイク"
  l_lake_buckhorn:0 "バックホーン湖"
- l_red_lake:0 "Red Lake"
- l_lake_silas:0 "Lake Silas"
- l_lake_yaeger:0 "Lake Yaeger"
- l_cloudy_lake:0 "Cloudy Lake"
- l_bear_lake:0 "Bear Lake"
- l_lake_vantar:0 "Lake Vantar"
- l_lake_tarsos:0 "Lake Tarsos"
- l_rapid_lake:0 "Rapid Lake"
- l_stone_lake:0 "Stone Lake"
- l_lake_tallisker:0 "Lake Tallisker"
- l_lake_jodot:0 "Lake Jodot"
- l_strong_arm_lake:0 "Strong Arm Lake"
- l_lake_mikwik:0 "Lake Mikwik"
- l_fresh_lake:0 "Fresh Lake"
- l_lake_of_ill_omen:0 "Lake of Ill Omen"
- l_daring_lake:0 "Daring Lake"
- l_lake_minos:0 "Lake Minos"
- l_sealed_lake:0 "Sealed Lake"
- l_crystal_lake_adj:0 "Crystal Lake"
- l_lake_buckhorn_adj:0 "Lake Buckhorn"
- l_red_lake_adj:0 "Red Lake"
- l_lake_silas_adj:0 "Lake Silas"
- l_lake_yaeger_adj:0 "Lake Yaeger"
- l_cloudy_lake_adj:0 "Cloudy Lake"
- l_bear_lake_adj:0 "Bear Lake"
- l_lake_vantar_adj:0 "Lake Vantar"
- l_lake_tarsos_adj:0 "Lake Tarsos"
- l_rapid_lake_adj:0 "Rapid Lake"
- l_stone_lake_adj:0 "Stone Lake"
- l_lake_tallisker_adj:0 "Lake Tallisker"
- l_lake_jodot_adj:0 "Lake Jodot"
- l_strong_arm_lake_adj:0 "Strong Arm Lake"
- l_lake_mikwik_adj:0 "Lake Mikwik"
- l_fresh_lake_adj:0 "Fresh Lake"
- l_lake_of_ill_omen_adj:0 "Lake of Ill Omen"
- l_daring_lake_adj:0 "Daring Lake"
- l_lake_minos_adj:0 "Lake Minos"
- l_sealed_lake_adj:0 "Sealed Lake"
- l_musket_lake:0 "Musket Lake"
- l_lake_acheron:0 "Lake Acheron"
- l_middling_lake:0 "Middling Lake"
- l_falcon_lake:0 "Falcon Lake"
- l_bison_pond:0 "Bison Pond"
- l_exploration_lake:0 "Exploration Lake"
- l_lake_stella:0 "Lake Stella"
- l_feather_lake:0 "Feather Lake"
- l_shark_lake:0 "Shark Lake"
- l_frost_lake:0 "Frost Lake"
- l_moon_lake:0 "Moon Lake"
- l_windy_lake:0 "Windy Lake"
- l_storm_lake:0 "Storm Lake"
- l_murky_lake:0 "Murky Lake"
- l_bottomless_lake:0 "Bottomless Lake"
- l_dark_lake:0 "Dark Lake"
- l_great_lake:0 "Great Lake"
- l_lake_parime:0 "Lake Parime"
- l_scholomance_lake:0 "Scholomance Lake"
- l_alcyonian_lake:0 "Alcyonian Lake"
- l_great_reservoir:0 "Great Reservoir"
- l_lake_courage:0 "Lake Courage"
- l_great_moose_lake:0 "Great Moose Lake"
- l_blue_lake:0 "Blue Lake"
- l_white_lake:0 "White Lake"
- l_azure_lake:0 "Azure Lake"
- l_lake_of_kark:0 "Lake of Kark"
- l_akki_lake:0 "Akki Lake"
- l_boot_lake:0 "Boot Lake"
- l_akkorokamui_lake:0 "Akkorokamui"
- l_apkallu_lake:0 "Apkallu Lake"
- l_stillwater_lake:0 "Stillwater Lake"
- l_lake_of_sorrow:0 "Lake of Sorrow"
- l_lake_of_summer:0 "Lake of Summer"
- l_lake_of_solitude:0 "Lake of Solitude"
- l_lake_of_fear:0 "Lake of Fear"
- l_lake_of_joy:0 "Lake of Joy"
- l_lake_of_excellence:0 "Lake of Excellence"
- l_lake_sisyphos:0 "Lake Sisyphos"
- l_cartographers_lake:0 "Cartographers Lake"
- l_crimson_depths:0 "Crimson Depths"
- l_diamond_lake:0 "Diamond Lake"
- l_burgher_lake:0 "Burgher Lake"
- l_lake_heqet:0 "Lake Heqet"
- l_frog_lake:0 "Frog Lake"
- l_salamander_lake:0 "Salamander Lake"
- l_llamhigyn_y_dwr_lake:0 "Llamhigyn y Dwr Lake"
- l_encantado_lake:0 "Encantado Lake"
- l_lake_kelpie:0 "Lake Kelpie"
- l_pabilsag_lake:0 "Pabilsag Lake"
- l_lake_callisto:0 "Lake Callisto"
- l_lake_garuda:0 "Lake Garuda"
- l_turul_lake:0 "Turul Lake"
- l_lake_phantom:0 "Lake Phantom"
- l_panther_lake:0 "Panther Lake"
- l_salmon_lake:0 "Salmon Lake"
- l_lake_abaia:0 "Lake Abaia"
- l_isonade_lake:0 "Isonade Lake"
- l_basilisk_lake:0 "Basilisk Lake"
- l_lake_hydra:0 "Lake Hydra"
- l_naga_lake:0 "Naga Lake"
- l_lake_ushabti:0 "Lake Ushabti"
- l_banshee_lake:0 "Lake Banshee"
- l_bug_lake:0 "Great Bug Lake"
- l_grindylow_lake:0 "Grindylow Lake"
- l_ahuizotl_lake:0 "Ahuizotl Lake"
- l_yacuruna_lake:0 "Yacuruna Lake"
- l_iara_lake:0 "Iara Lake"
- l_bunyip_lake:0 "Bunyip Lake"
- l_lake_ogopogo:0 "Lake Ogopogo"
- l_lake_rusalka:0 "Lake Rusalka"
- l_lake_cleric:0 "Lake Cleric"
- l_regal_lake:0 "Regal Lake"
- l_cyclops_lake:0 "Cyclops Lake"
- l_lake_wili:0 "Lake Wili"
- l_myling_lake:0 "Myling Lake"
- l_dryad_lake:0 "Dryad Lake"
- l_lake_tiamat:0 "Lake Tiamat"
- l_lake_rapids:0 "Lake Rapids"
- l_satyr_lake:0 "Satyr Lake"
- l_lake_fitzgerald:0 "Lake Fitzgerald"
- l_lake_fitzgerald_adj:0 "Lake Fitzgerald"
+ l_red_lake:0 "レッド・レイク"
+ l_lake_silas:0 "シラス湖"
+ l_lake_yaeger:0 "イェーガー湖"
+ l_cloudy_lake:0 "クラウディ・レイク"
+ l_bear_lake:0 "ベア・レイク"
+ l_lake_vantar:0 "ヴァンタール湖"
+ l_lake_tarsos:0 "タルソス湖"
+ l_rapid_lake:0 "ラピット・レイク"
+ l_stone_lake:0 "ストーン湖"
+ l_lake_tallisker:0 "タリスカー湖"
+ l_lake_jodot:0 "ジャド湖"
+ l_strong_arm_lake:0 "ストロングアーム・レイク"
+ l_lake_mikwik:0 "ミクウィク湖"
+ l_fresh_lake:0 "フレッシュ・レイク"
+ l_lake_of_ill_omen:0 "イルオーメンの湖"
+ l_daring_lake:0 "勇敢な湖"
+ l_lake_minos:0 "ミノス湖"
+ l_sealed_lake:0 "シールド・レイク"
+ l_crystal_lake_adj:0 "クリスタル・レイク"
+ l_lake_buckhorn_adj:0 "バックホーン湖"
+ l_red_lake_adj:0 "レッド・レイク"
+ l_lake_silas_adj:0 "シラス湖"
+ l_lake_yaeger_adj:0 "イェーガー湖"
+ l_cloudy_lake_adj:0 "クラウディ・レイク"
+ l_bear_lake_adj:0 "ベア・レイク"
+ l_lake_vantar_adj:0 "ヴァンタール湖"
+ l_lake_tarsos_adj:0 "タルソス湖"
+ l_rapid_lake_adj:0 "ラピット・レイク"
+ l_stone_lake_adj:0 "ストーン湖"
+ l_lake_tallisker_adj:0 "タリスカー湖"
+ l_lake_jodot_adj:0 "ジャド湖"
+ l_strong_arm_lake_adj:0 "ストロングアーム・レイク"
+ l_lake_mikwik_adj:0 "ミクウィク湖"
+ l_fresh_lake_adj:0 "フレッシュ・レイク"
+ l_lake_of_ill_omen_adj:0 "イルオーメンの湖"
+ l_daring_lake_adj:0 "勇敢な湖"
+ l_lake_minos_adj:0 "ミノス湖"
+ l_sealed_lake_adj:0 "シールド・レイク"
+ l_musket_lake:0 "マスケット湖"
+ l_lake_acheron:0 "アケロン湖"
+ l_middling_lake:0 "ミドリング湖"
+ l_falcon_lake:0 "ファルコン湖"
+ l_bison_pond:0 "バイソン池"
+ l_exploration_lake:0 "探検の湖"
+ l_lake_stella:0 "ステラ湖"
+ l_feather_lake:0 "フェザー・レイク"
+ l_shark_lake:0 "シャーク湖"
+ l_frost_lake:0 "フロスト湖"
+ l_moon_lake:0 "ムーンレイク"
+ l_windy_lake:0 "ウィンディ・レイク"
+ l_storm_lake:0 "ストーム湖"
+ l_murky_lake:0 "マーキィ・レイク"
+ l_bottomless_lake:0 "底なし湖"
+ l_dark_lake:0 "ダーク・レイク"
+ l_great_lake:0 "グレート湖"
+ l_lake_parime:0 "パリメ湖"
+ l_scholomance_lake:0 "ショロマンツェ湖"
+ l_alcyonian_lake:0 "アルキオニア湖"
+ l_great_reservoir:0 "大リザーバー"
+ l_lake_courage:0 "勇気の湖"
+ l_great_moose_lake:0 "大ムース湖"
+ l_blue_lake:0 "ブルーレイク"
+ l_white_lake:0 "ホワイトレイク"
+ l_azure_lake:0 "アジュールレイク"
+ l_lake_of_kark:0 "カルク湖"
+ l_akki_lake:0 "アッキ湖"
+ l_boot_lake:0 "ブート湖"
+ l_akkorokamui_lake:0 "アッコロカムイ"
+ l_apkallu_lake:0 "アプカルル湖"
+ l_stillwater_lake:0 "スティルウォーター湖"
+ l_lake_of_sorrow:0 "悲しみの湖"
+ l_lake_of_summer:0 "夏の湖"
+ l_lake_of_solitude:0 "孤独の湖"
+ l_lake_of_fear:0 "恐怖の湖"
+ l_lake_of_joy:0 "喜びの湖"
+ l_lake_of_excellence:0 "卓越の湖"
+ l_lake_sisyphos:0 "シシュフォス湖"
+ l_cartographers_lake:0 "製図者の湖"
+ l_crimson_depths:0 "クリムゾン深部"
+ l_diamond_lake:0 "ダイヤモンド湖"
+ l_burgher_lake:0 "市民の湖"
+ l_lake_heqet:0 "ヘケト湖"
+ l_frog_lake:0 "フロッグ・レイク"
+ l_salamander_lake:0 "サラマンダー湖"
+ l_llamhigyn_y_dwr_lake:0 "サムヒギン・ア・ドゥル湖"
+ l_encantado_lake:0 "エンカンタド湖"
+ l_lake_kelpie:0 "ケルピー湖"
+ l_pabilsag_lake:0 "パビルサグ湖"
+ l_lake_callisto:0 "カリスト湖"
+ l_lake_garuda:0 "ガルーダ湖"
+ l_turul_lake:0 "トゥルル湖"
+ l_lake_phantom:0 "ファントム湖"
+ l_panther_lake:0 "パンサー湖"
+ l_salmon_lake:0 "サーモン湖"
+ l_lake_abaia:0 "アバイア湖"
+ l_isonade_lake:0 "磯撫での湖"
+ l_basilisk_lake:0 "バジリスク湖"
+ l_lake_hydra:0 "ヒュドラ湖"
+ l_naga_lake:0 "ナガ湖"
+ l_lake_ushabti:0 "ウシャブティ湖"
+ l_banshee_lake:0 "バンシー湖"
+ l_bug_lake:0 "大バグ湖"
+ l_grindylow_lake:0 "グリンディロー湖"
+ l_ahuizotl_lake:0 "アウィツォトル湖"
+ l_yacuruna_lake:0 "ヤクルナ湖"
+ l_iara_lake:0 "イアラ湖"
+ l_bunyip_lake:0 "バニップ湖"
+ l_lake_ogopogo:0 "オゴポゴ湖"
+ l_lake_rusalka:0 "ルサルカ湖"
+ l_lake_cleric:0 "聖職者の湖"
+ l_regal_lake:0 "リーガル湖"
+ l_cyclops_lake:0 "サイクロプス湖"
+ l_lake_wili:0 "ヴィリ湖"
+ l_myling_lake:0 "ミリング湖"
+ l_dryad_lake:0 "ドライアド湖"
+ l_lake_tiamat:0 "ティアマト湖"
+ l_lake_rapids:0 "レイク・ラピット"
+ l_satyr_lake:0 "サテュロス湖"
+ l_lake_fitzgerald:0 "フィッツジェラルド湖"
+ l_lake_fitzgerald_adj:0 "フィッツジェラルド湖"
