--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -508,7 +508,7 @@
  NEW_ACHIEVEMENT_14_1_NAME:0 "ホーム・アンド・アウェイ"
  NEW_ACHIEVEMENT_14_1_DESC:0 "ウェールズで、カーディフ、ダブリン、エディンバラ、ローマ、パリ、ロンドンを保持する。"
  NEW_ACHIEVEMENT_14_2_NAME:0 "太陽の侵攻"
- NEW_ACHIEVEMENT_14_2_DESC:0 "マジャスでテペアカック、メヒコ、トゥルカン、ワステックを中核化する。"
+ NEW_ACHIEVEMENT_14_2_DESC:0 "マドジャスでテペアカック、メヒコ、トゥルカン、ワステックを中核化する。"
  NEW_ACHIEVEMENT_14_3_NAME:0 "シアトルで眠れない"
  NEW_ACHIEVEMENT_14_4_NAME:0 "フィリピンのトラ"
  NEW_ACHIEVEMENT_14_4_DESC:0 "セブでチョーラ帝国を再興する。"
