--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -819,9 +819,9 @@
  west_african.11.a:0 "我々は彼らの慣習を自分たちのものと同じように尊重する。"
  west_african.11.b:0 "神以外に神はない。彼らがこれを学ばなければ、我々は何も達成することはない。"
  west_african.12.t:0 "多くの精霊、一つの神"
- west_african.12.d:0 "我々は長い間、イスラム教徒の信仰を知っていたが、我々の伝統に真実を保つことを選択した。我々の間に暮らす神と精霊を捨て去って遠く離れた創造者にしか捧げない人々は、確実に不幸の道へ向かうだろう。\n\n毎日をイスラム教徒の隣に暮らす国境にいる人々は、物事を別の見方で見るようになった。彼らは、彼らだけでなく、彼らの隣人たちと話す中で、ムハンマドの言葉について、これを昔の方法への裏切りとして見るのではなく、最も尊敬される天空神と預言者の神を識別することを見出している。"
+ west_african.12.d:0 "我々は長い間イスラム教徒の信仰を聞き及んでいたが、我々の伝統に忠実であり続けることを選択した。遥かに遠い創造主にのみ身を捧げ、我々とともにある神々と精霊を捨て去ろうという人々は、確実に不幸の道へ向かうだろう。\n\n国境近くの、イスラム教徒の隣で日々暮らす人々は、物事の見方が変わるようになった。ムハンマドが語る言葉は彼らの隣人に対してだけではなく彼ら自身にも向けられており、これは昔ながらの慣習への裏切りなどではなく、むしろ預言者の言う神とは我々の最も尊敬する天空神と同一のものであるのだと彼らは気づいた。"
  west_african.12.a:0 "空に祈る間、あなたの祖先は忘れ去られる。これは受け入れがたい。"
- west_african.12.b:0 "おそらく我々が彼らの神を受け入れるなら、彼らは我々について多くのことを考えるだろう。"
+ west_african.12.b:0 "神1柱を受け容れれば、彼らも我らが多数の神を受け容れるかも。"
  west_african.13.t:0 "信仰では妥協しない"
  west_african.13.d:0 "我々の市民の多くはまだ[Root.Religion.GetName]信仰の信者ではないが、我々は希望と忍耐を持っている。他の者はそれほど辛抱強くはない。我々の市民の多くは、神の恩寵によって支配する[Root.Monarch.GetTitle]が我が国の広範な異教徒を受け入れることは不合理であると考えている。これは、全く同じように異教徒たちの間で、彼らが外部から押し付けられた信念体系の国民であるという懸念を引き起こしており、彼らの中には、[Root.Monarch.GetSheHe]がここに何千年も暮らしている人々の精神的な慣習に敬意を示さないのであれば[Root.Monarch.GetTitle]の打倒を呼びかける者もいる。"
  west_african.13.a:0 "信者は正しい。我々はこの不信心を容認しないだろう。"
