--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -471,7 +471,7 @@
  flavor_hun.29.a:0 "彼はすぐに解放されなければならない！"
  flavor_hun.29.b:0 "十分かつ適切だ。"
  flavor_hun.30.t:0 "ヤヌス・パンノニウス"
- flavor_hun.30.d:0 "幼い頃から徹底したルネサンス教育を受けていた新しい首相であるパンノニウスは、ハンガリーの宮廷に広範な人脈だけでなく、多くの蔵書を提供している。彼の仕事において、彼は人間主義と我々の時代の新しい理想のための忠実な仲介者である。"
+ flavor_hun.30.d:0 "幼い頃から徹底したルネサンス教育を受けていた新しい首相であるパンノニウスは、ハンガリーの宮廷に広範な人脈だけでなく、多くの蔵書を提供している。彼の仕事において、彼は人文主義と我々の時代の新しい理想のための忠実な仲介者である。"
  flavor_hun.30.a:0 "素晴らしい。"
  flavor_hun.31.t:0 "上ハンガリー都市同盟"
  flavor_hun.31.d:0 "上ハンガリーの多くの豊かな鉱山は、多くの点で経済的利益にとって不可欠であり、したがって、多くの場合、我が国の他の居住地に対して許容しているよりもはるかに大きな自由を与えられてきた。「都市の空気は自由にする」というドイツの言葉は、都市自体のためにも、地域社会の中で道を見いだすかもしれない農奴たち、両方にとって真実である。ヨーロッパ全土の地金供給が不足しているため、都市部の同盟は今やより豊かで、自信を深めている。\nしかし、我々の貴族の中には、彼らが余りにも余裕を持つことを許しており、我が国の防衛のために彼らが提供するよう、最低限の要求はするべきだと主張する人々もいる。"
@@ -533,7 +533,7 @@
  flavor_mlo.8.d:0 "我々の偉大な公爵は彼の本『君主論』で数回言及され、彼の国を支配する一般的な能力によって賞賛され、傭兵に頼らないよう警告されている。"
  flavor_mlo.8.a:0 "我々は正しいことをやっている。"
  flavor_mlo.9.t:0 "レオナルド・ダ・ヴィンチ"
- flavor_mlo.9.d:0 "ダ・ヴィンチは、イタリアの画家、製図者、彫刻家、建築家、技術者であり、ルネサンスの人間主義の理想をどのような天才と言われた人物よりもおそらく多く描いている。彼の『最後の晩餐』と『モナリザ』は、ルネサンスの最も一般的で影響力のある絵の一つである。彼のノートブは、今後何世紀にもわたる科学探究の精神と機械的創造性を示している。"
+ flavor_mlo.9.d:0 "ダ・ヴィンチは、イタリアの画家、製図者、彫刻家、建築家、技術者であり、ルネサンスの人文主義の理想をどのような天才と言われた人物よりもおそらく多く描いている。彼の『最後の晩餐』と『モナリザ』は、ルネサンスの最も一般的で影響力のある絵の一つである。彼のノートブは、今後何世紀にもわたる科学探究の精神と機械的創造性を示している。"
  flavor_mlo.9.a:0 "真のルネサンスの人だ！"
  flavor_mlo.10.t:0 "流行の中心地"
  flavor_mlo.10.d:0 "中世後期にはミラノの街は流行の中心地となった。贅沢品を作ることがとても重要であったため、他の言語では街自体が優秀な品を表現する単語として使われていた。16世紀初頭、イタリアでは宮廷を最も魅力的なものとするため、2万人以上の労働者が絹産業に雇用された。"
@@ -925,7 +925,7 @@
  flavor_eng.9880.a:0 "素晴らしい。"
  flavor_eng.9880.a.tooltip:0 "10年間は、異なる§Yシンポジウム§!が行われます。"
  flavor_swe.1974.t:0 "スウェーデンの都市！"
- flavor_swe.1974.d:0 "しかしながら、転機は、ヨハン王のフランス承継ではなく、ストックホルムの陰鬱な冬の夜よりも17世紀のパリの温かい国際的な雰囲気を好んだ、彼のパレ・ロワイヤルへの移転でもなかった。転機は1651年のパリの大火とともに翌月に訪れることになるだろう。火災は現在の第六区で発生し、パレ・ロワイヤル、市庁舎およびノートルダム大聖堂などはセーヌ川によって火から隔離され危機を脱すると思われたが、川の南は深刻な危機にあることがすぐに明らかになった。スウェーデン語を話す管理者とフランス語を話す消防士の部下との間の混乱により、対応の努力はばらばらとなり、混沌としたままだった。事態は悪化し、泣き叫ぶ避難民は無秩序な暴徒を形成した。新たにホームレスとなった暴徒化した群衆が、シャンゼリゼ大通りを略奪しながら、現在の第8区を襲撃した。スウェーデン兵士だけが、重要な第4区とパレ・ロワイヤルが同じ運命となることを防いだ。灰塵が収まると、フランスのパリの大部分は消滅してしまっていた。ヨハン王は、彼の新たな都市の廃墟と化した残骸の中で一つの機会を得た。彼は避難民のために、公的助成による定住地を設けたが、それはサン・ジェルマンに設置された。イル・ド・フランスの中心部が小さくなり、フランス人ホームレスがパリから出ていったので、ヨハンはセーヌ川の南部をスカンジナビア様式で再建するために、当時、最も偉大な建築家であったモーリス・ド・ブロワを雇った。スウェーデンの貴族たちの反乱を懸念していたヨハンは、創造的な解決策を思いついたのだった。彼はスウェーデンとフィンランドの貴族をパリ南部に移住させ、パレ・ロワイヤル近くにいるようにしていたので、ヨハンは彼らを監視することができたのである。"
+ flavor_swe.1974.d:0 "しかしながら、転機は、ヨハン王のフランス承継ではなく、ストックホルムの陰鬱な冬の夜よりも17世紀のパリの温かい国際的な雰囲気を好んだ、彼のパレ・ロワイヤルへの移転でもなかった。転機は1651年のパリの大火とともに翌月に訪れることになるだろう。火災は現在の第六区で発生し、パレ・ロワイヤル、市庁舎およびノートルダム大聖堂などはセーヌ川によって火から隔離され危機を脱すると思われたが、川の南は深刻な危機にあることがすぐに明らかになった。スウェーデン語を話す管理者とフランス語を話す消防士の部下との間の混乱により、対応の努力はばらばらとなり、混沌としたままだった。事態は悪化し、泣き叫ぶ避難民は無秩序な暴徒を形成した。新たにホームレスとなった暴徒化した群衆が、シャンゼリゼ大通りを略奪しながら、現在の第8区を襲撃した。スウェーデン兵士だけが、重要な第4区とパレ・ロワイヤルが同じ運命となることを防いだ。灰塵が収まると、フランスのパリの大部分は消滅してしまっていた。ヨハン王は、彼の新たな都市の廃墟と化した残骸の中で一つの機会を得た。彼は避難民のために、公的助成による定住地を設けたが、それはサン・ジェルマンに設置された。イル・ド・フランスの中心部が小さくなり、フランス人ホームレスがパリから出ていったので、ヨハンはセーヌ川の南部をスカンディナヴィア様式で再建するために、当時、最も偉大な建築家であったモーリス・ド・ブロワを雇った。スウェーデンの貴族たちの反乱を懸念していたヨハンは、創造的な解決策を思いついたのだった。彼はスウェーデンとフィンランドの貴族をパリ南部に移住させ、パレ・ロワイヤル近くにいるようにしていたので、ヨハンは彼らを監視することができたのである。"
  flavor_swe.1974.a:0 "ひどいものではない…"
  flavor_swe.EVTNAME5030:0 "エリク・ダールベリ"
  flavor_swe.EVTDESC5030:0 "1679年、熟練した軍人であり軍事技術者でもあったエリク・ダールベリがスウェーデンの要塞局長に任命された。当時、スウェーデンは権力の頂点にあり、過去数十年の攻撃政策により国境はかつてないほど広がっていた。エリク・ダールベリと彼の仲間たちは、いくつかの堅固な要塞を設計し、地形を最大限有効に活用して帝国周辺の重要な地点に建設した。ヨーテボリの偉大な砦レイヨネットとクローナル、ヴァールベリとダラレーの要塞はすべて天才の証である。残念なことに、緊縮した予算により、東部の州には建設が許されなかった。これは、今後、数年間に悲惨な結果を招くだろう…"
@@ -945,7 +945,7 @@
  flavor_swe.EVTOPTA3218:0 "カルマルの合意を拒否する。"
  flavor_swe.EVTOPTB3218:0 "協定を尊重する。"
  flavor_swe.EVTNAME3219:0 "カルマル同盟の終焉"
- flavor_swe.EVTDESC3219:0 "ノルウェー、スウェーデン、デンマークの王室の評議会はカルマル市で1397年に会合し、スカンジナヴィアの3つの国家を単一の君主の下に統一することを決断した。当時、ヨーロッパ最大の国家であったこの「カルマル同盟」は、ゆるやかな組織と不均衡なデンマークの支配によって当初から悩みを抱えていた。スウェーデンとデンマークの間の1470年代後半の恒常的な争いは、スウェーデンの全国評議会がグスタフ・エリクソン・ヴァーサを自由の闘士に国王グスタフ1世（1523〜1560）として選択したことで、摂政、大ステン・ストゥーレが1471年にブルンケベルグでデンマークを破ってから長い年月を経て、1523年に同盟を解消へと向かわせることとなった。 "
+ flavor_swe.EVTDESC3219:0 "ノルウェー、スウェーデン、デンマークの王室の評議会はカルマル市で1397年に会合し、スカンディナヴィアの3つの国家を単一の君主の下に統一することを決断した。当時、ヨーロッパ最大の国家であったこの「カルマル同盟」は、ゆるやかな組織と不均衡なデンマークの支配によって当初から悩みを抱えていた。スウェーデンとデンマークの間の1470年代後半の恒常的な争いは、スウェーデンの全国評議会がグスタフ・エリクソン・ヴァーサを自由の闘士に国王グスタフ1世（1523〜1560）として選択したことで、摂政、大ステン・ストゥーレが1471年にブルンケベルグでデンマークを破ってから長い年月を経て、1523年に同盟を解消へと向かわせることとなった。"
  flavor_swe.EVTOPTA3219:0 "自由だ！"
  flavor_swe.EVTOPTB3219:0 "同盟に残る。"
  flavor_swe.EVTNAME3220:0 "同盟の危機"
@@ -2711,7 +2711,7 @@
  flavor_mng.EVTOPTA16:0 "おそらく害はないだろう。"
  flavor_mng.EVTOPTB16:0 "陰謀者を潰せ！"
  flavor_hol.EVTNAME5120:0 "エラスムス"
- flavor_hol.EVTDESC5120:0 "エラスムスは、北部ルネサンスの人間主義者であり、新約聖書の最初の編集者であり、彼の人生の間に神学論争で大きな影響を及ぼした教会学や古典文学の重要な人物でもあった。中道の立場の人物として、彼の見解は、正統性よりも自由を重視する人々のためのかがり火となった。"
+ flavor_hol.EVTDESC5120:0 "エラスムスは、北部ルネサンスの人文主義者であり、新約聖書の最初の編集者であり、彼の人生の間に神学論争で大きな影響を及ぼした教会学や古典文学の重要な人物でもあった。中道の立場の人物として、彼の見解は、正統性よりも自由を重視する人々のためのかがり火となった。"
  flavor_hol.EVTOPTOK:0 "OK"
  flavor_hol.EVTNAME5121:0 "フーゴー・グローティウス"
  flavor_hol.EVTDESC5121:0 "フーゴー・グローティウスはオランダの学者であり弁護士であった。彼の最もよく知られている本『戦争と平和の法』は1625年に出版され、法律的な傑作であり、近代国際法の基礎を築いた。彼はまた、刑務所（彼は政治的、宗教的な争いのために投獄されていた）からの、本一冊を胸に携えての脱獄によっても有名である！彼はまた、他の法律および宗教的な作品や詩を執筆した。"
@@ -3292,7 +3292,7 @@
  flavor_nor.10.d:0 "スコットランドの島々に対する彼らの請求権をあきらめるのではなく、ノルウェーの貴族たちは正当な王に反乱を起こしている。彼らは彼らの新しい支配者としてノルウェーの貴族を選出した。"
  flavor_nor.10.a:0 "彼らが挑戦してくるとは思ってもいなかった！"
  flavor_nor.11.t:0 "ベルゲン暴動"
- flavor_nor.11.d:0 "ベルゲンフス要塞の有名な指揮官でノルウェーのハンザ同盟の不倶戴天の敵であるオラフ・ニルソン・スケンクは地元の商人によって殺された。オラフは長い間、王に仕えてきた一方で海賊でもあり、北海全域でハンザ同盟の船を襲っていた。ドイツの商人たちの利益を脅かすこの脅威を排除するために、ドイツの商人たちは暴動を起こした。彼らは地元の修道院でオラフを追い詰めて、彼を地面で焼き殺した。\nオラフは、修道士、地元の市民、ベルゲンの司教と共に炎の中で最期を遂げた。言うまでもないが、これはもはやスカンジナビアが確固として反ハンザ同盟の傾向を燃え上がらせる可能性のある出来事である。"
+ flavor_nor.11.d:0 "ベルゲンフス要塞の有名な指揮官でノルウェーのハンザ同盟の不倶戴天の敵であるオラフ・ニルソン・スケンクは地元の商人によって殺された。オラフは長い間、王に仕えてきた一方で海賊でもあり、北海全域でハンザ同盟の船を襲っていた。ドイツの商人たちの利益を脅かすこの脅威を排除するために、ドイツの商人たちは暴動を起こした。彼らは地元の修道院でオラフを追い詰めて、彼を地面で焼き殺した。\nオラフは、修道士、地元の市民、ベルゲンの司教と共に炎の中で最期を遂げた。言うまでもないが、これはもはやスカンディナヴィアが確固として反ハンザ同盟の傾向を燃え上がらせる可能性のある出来事である。"
  flavor_nor.11.a:0 "本当に何もできない…"
  flavor_nor.11.b:0 "これはベルゲンのハンザ同盟との終わりを意味している！"
  flavor_nor.12.t:0 "ベルゲン暴動"
