--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -68,10 +68,10 @@
  institution_events.400.d:1 "書かれた言葉を大量生産する能力は情報の拡散、またその他様々な意味において、近代社会に革命をもたらすであろう。ヴェネツィア人出版工アルドゥス・マヌティウスのようなルネサンスの人々によって開拓されたこの新しい技術は、翻訳された古典をより広く普及させることによって、ルネサンスを促進させた。その後、宗教改革の運動家たちは、書かれた批評や神聖な書物の翻訳を普及させることが可能なこの技術を最大限利用した。\n\n今や印刷業は技術として成熟し、[institution_origin.GetContinentName]全体に普及しており、出版業も発達し、行動を促すための何十万もの宗教や政治にかかわるチラシや科学に関する研究書などが大陸に流通している。印刷会社が発展するにつれ、君主たちは、事業が国境を移動することによって、また時にはただタイトルページの名前を変えてしまうだけで検閲を突破できてしまう、この今までより容易な生産を約束する新しい技術にどう対処するべきか頭を抱えてしまっている。"
  institution_events.401.d:0 "信じられないほど膨大な「書き物」を生産しているという遠方の地の風聞が流れてきた。噂によればこの何か謎の存在は、彼らの常識と政治勢力をまったくひっくり返してしまったらしい。"
  institution_events.5.t:0 "世界交易"
- institution_events.5.d:0 "古代より商材は大陸を横断して移動し続けてきた。しかし、それはインド洋やシルクロードを渡るインドや中国の製造品のように、いくつかの道程や商品に限られたことであり、徐々にあらゆる交易が特定の最重要ルートに依存するようになったほどである。アメリカ大陸、アフリカ海洋周回ルート、太平洋横断ルートの発見により、諸地域の商業網はグローバルな商業網に相互接続されるようになった。\n\nアンデスで採掘された銀は、今や箱詰めされ、ヨーロッパや遠路はるばる中国やインドにまで運ばれるようになっている。スカンジナビアで採掘されて生成された鉄は、イギリスの商人たちによって西アフリカで販売され、その他の商人は、東南アジアの交易エリアで織物やスパイスの交易で富を成している。インドの地域商人は、将来有望な西洋の交易事業に投資している。確かにまだ本当の世界経済というものを語るには早すぎるかもしれないが、その種は確実に蒔かれたと言えよう。"
+ institution_events.5.d:0 "古代より商材は大陸を横断して移動し続けてきた。しかし、それはインド洋やシルクロードを渡るインドや中国の製造品のように、いくつかの道程や商品に限られたことであり、徐々にあらゆる交易が特定の最重要ルートに依存するようになったほどである。アメリカ大陸、アフリカ海洋周回ルート、太平洋横断ルートの発見により、諸地域の商業網はグローバルな商業網に相互接続されるようになった。\n\nアンデスで採掘された銀は、今や箱詰めされ、ヨーロッパや遠路はるばる中国やインドにまで運ばれるようになっている。スカンディナヴィアで採掘されて生成された鉄は、イギリスの商人たちによって西アフリカで販売され、その他の商人は、東南アジアの交易エリアで織物やスパイスの交易で富を成している。インドの地域商人は、将来有望な西洋の交易事業に投資している。確かにまだ本当の世界経済というものを語るには早すぎるかもしれないが、その種は確実に蒔かれたと言えよう。"
  institution_events.5.a.tt:0 "まだ完全に§Y世界交易§!の制度を§Y受容§!していない国は、技術コストに毎年§R1%§!のペナルティが付与され、ペナルティは最大§R50%§!まで上昇します。"
  institution_events.5.a:0 "これはすべてを変えるな…"
- institution_events.500.d:0 "古代より商材は大陸を横断して移動し続けてきた。しかし、それはインド洋やシルクロードを渡るインドや中国の製造品のように、いくつかの道程や商品に限られたことであり、徐々にあらゆる交易が特定の最重要ルートに依存するようになったほどである。アメリカ大陸、アフリカ海洋周回ルート、太平洋横断ルートの発見により、諸地域の商業網はグローバルな商業網に相互接続されるようになった。\n\nアンデスで採掘された銀は、今や箱詰めされ、ヨーロッパや遠路はるばる中国やインドにまで運ばれるようになっている。スカンジナビアで採掘されて生成された鉄は、イギリスの商人たちによって西アフリカで販売され、その他の商人は、東南アジアの交易エリアで織物やスパイスの交易で富を成している。インドの地域商人は、将来有望な西洋の交易事業に投資している。確かにまだ本当の世界経済というものを語るには早すぎるかもしれないが、その種は確実に蒔かれたと言えよう。"
+ institution_events.500.d:0 "古代より商材は大陸を横断して移動し続けてきた。しかし、それはインド洋やシルクロードを渡るインドや中国の製造品のように、いくつかの道程や商品に限られたことであり、徐々にあらゆる交易が特定の最重要ルートに依存するようになったほどである。アメリカ大陸、アフリカ海洋周回ルート、太平洋横断ルートの発見により、諸地域の商業網はグローバルな商業網に相互接続されるようになった。\n\nアンデスで採掘された銀は、今や箱詰めされ、ヨーロッパや遠路はるばる中国やインドにまで運ばれるようになっている。スカンディナヴィアで採掘されて生成された鉄は、イギリスの商人たちによって西アフリカで販売され、その他の商人は、東南アジアの交易エリアで織物やスパイスの交易で富を成している。インドの地域商人は、将来有望な西洋の交易事業に投資している。確かにまだ本当の世界経済というものを語るには早すぎるかもしれないが、その種は確実に蒔かれたと言えよう。"
  institution_events.501.d:0 "我々の長距離交易業者は、徐々に多くのエキゾチックな商材を市場に運び込むようになった。彼らは、彼らの仕入れ先である別大陸との交易業者が毎年何倍ものコネクションを別のトレードノードあるいは会社と得るようになったからだと言い張っている。中には、彼らの将来の交易に投資するよう提案するものもいる、彼らの主張によればそういったことは遠い彼らの祖国では共通の習慣なのだとか。"
  institution_events.6.t:0 "工場"
  institution_events.6.d:0 "16世紀と17世紀のいくつかの技術革新によって、鉄や布などの一部の製品の生産高はある程度まで増加したが、生産分野における最大の改善は、新しい組織形態への変化だった。都市の限界を超えた工場を作ることで、商業資本家たちは、大量生産を妨げる古いギルドの条例を避け、一箇所での労働者の組織化、専門化を通して生産を増やす先駆的方法を導き出すことができた。後の工業化の先駆者達は、高価な新しい機材というよりも、原材料や労働集団へのアクセスを促進することで生産量を増やした。これ自体は、頻繁に大いに規制されていた古い手法の大幅な変化である。しかしながら、今後の技術進歩とともに、この新しい生産方式は社会に革命をもたらすことになるだろう。"
@@ -1449,7 +1449,7 @@
  EVTOPTA5092:0 "新しい関税を課す。"
  EVTOPTB5092:1 "新しい関税を課すべきではない。"
  EVTNAME5093:1 "議会が[Root.Dip_Advisor.GetName]の解任を要求"
- EVTDESC5093:1 "議会の指導者たちは、[Root.Dip_Advisor.GetHerHis]の能率の悪さや判断の悪さ（実際には[Root.Dip_Advisor.GetHerHis]による率直な批判が動機となっているのだが）のいくつかの例を挙げ、、[Root.Dip_Advisor.GetName]の公職からの解任を要求している。"
+ EVTDESC5093:1 "議会の指導者たちは、[Root.Dip_Advisor.GetHerHis]の能率の悪さや判断の悪さ（実際には[Root.Dip_Advisor.GetHerHis]による率直な批判が動機となっているのだが）のいくつかの例を挙げ、[Root.Dip_Advisor.GetName]の公職からの解任を要求している。"
  EVTOPTA5093:1 "[Root.Dip_Advisor.GetHerHim]はクビだ！"
  EVTOPTB5093:1 "我々は[Root.Dip_Advisor.GetHerHim]を信じている。"
  EVTNAME5094:0 "異端者の顧問"
