Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -663,7 +663,7 @@
  aow_events.21.d:0 "[Root.GetName]には最近の戦争の歴史があり、[Root.GetAdjective]の人々はその目的をますます疑っているが、[Root.Monarch.GetTitle]はこれまで以上に軍を導いている。兵士たちは疲労し、故郷に帰ることを望んでいる。我々がどれほど悪いかを考える理由は全く無かった。\n\n今日までは。軍隊が敵と対峙する準備をしている時、銃声が響き、王は地面に倒れ、死んだ。敵の狙撃兵？王位請求者による陰謀？あるいはただ、悪い物を捨て去って、前に進もうと望む誰かによるものであったのかもしれない。"
  aow_events.21.a:0 "永遠に分からずじまいだろう。"
  aow_events.22.t:0 "特質の変化"
- aow_events.22.d:0 "戦争の終結後、熱心な外交顧問である$DIPLOMAT$は、[Root.Monarch.GetName]が将来の流血を避けるために外交政策を転換するするだけでなく、[Root.Monarch.GetSheHe]が[Root.Monarch.GetHerHis]の支配者としての優先順位を変えるべきだとさえ提案している。\n\n「人々が[Root.Monarch.GetTitle]は戦争の準備をしていると見なす限り、戦争が彼らの前で起こった時、我々を非難する以外、彼らに何ができるでしょうか？」$DIPLOMAT$は尋ねる。「人々が望むのは単なるものではございません。それはこの国が必要とするものなのです」"
+ aow_events.22.d:0 "戦争の終結後、熱心な外交顧問である$DIPLOMAT$は、[Root.Monarch.GetName]が将来の流血を避けるために外交政策を転換するだけでなく、[Root.Monarch.GetSheHe]が[Root.Monarch.GetHerHis]の支配者としての優先順位を変えるべきだとさえ提案している。\n\n「人々が[Root.Monarch.GetTitle]は戦争の準備をしていると見なす限り、戦争が彼らの前で起こった時、我々を非難する以外、彼らに何ができるでしょうか？」$DIPLOMAT$は尋ねる。「人々が望むのは単なるものではございません。それはこの国が必要とするものなのです」"
  aow_events.22.a:0 "貴殿が正しい、[Root.GetName]には平和が必要だ。"
  aow_events.22.b:0 "余を戦争に呼びこむ精神を捨てろだと？馬鹿げている。"
  aow_events.23.t:0 "敵地での忠実な信者たち"
