--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -176,10 +176,10 @@
  HARSH_POSITION_TAKEN:0 "過酷な姿勢"
  CONCILATORY_POSITION_TAKEN_HEAD:0 "調停的"
  HARSH_POSITION_TAKEN_HEAD:0 "過酷"
- COUNCIL_STANCE_US_TITLE:0 "トリエント公会議において$POSITION_HEAD$"
+ COUNCIL_STANCE_US_TITLE:0 "トリエント公会議で$POSITION_HEAD$"
  COUNCIL_STANCE_US_SETUP:0 "我々がトリエント公会議での姿勢を変更する時"
  COUNCIL_STANCE_US_HEADER:0 "大司教からの報告"
- COUNCIL_STANCE_US_1:0 "トリエント公会議において$POSITION$を取っている"
+ COUNCIL_STANCE_US_1:0 "トリエント公会議で$POSITION$を取っている"
  COUNCIL_STANCE_US_2:0 ""
  COUNCIL_STANCE_US_3:0 ""
  COUNCIL_STANCE_US_4:0 ""
@@ -188,10 +188,10 @@
  COUNCIL_STANCE_US_BTN2:0 "OK"
  COUNCIL_STANCE_US_BTN3:0 "移動"
  COUNCIL_STANCE_US_MAP:0 "$POSITION$"
- COUNCIL_STANCE_THEM_TITLE:0 "トリエント公会議において$POSITION_HEAD$"
+ COUNCIL_STANCE_THEM_TITLE:0 "トリエント公会議で$POSITION_HEAD$"
  COUNCIL_STANCE_THEM_SETUP:0 "他国がトリエント公会議での姿勢を変更するとき"
  COUNCIL_STANCE_THEM_HEADER:0 "大司教からの報告"
- COUNCIL_STANCE_THEM_1:0 "$WHO$はトリエント公会議での姿勢を変更しました"
+ COUNCIL_STANCE_THEM_1:0 "$WHO$がトリエント公会議の姿勢を変更"
  COUNCIL_STANCE_THEM_2:0 "$POSITION$"
  COUNCIL_STANCE_THEM_3:0 ""
  COUNCIL_STANCE_THEM_4:0 ""
@@ -961,7 +961,7 @@
  IMPERIAL_INCIDENT_SELECTED_OPTION:0 "\n§Y皇帝§!はこの選択肢を支持します。"
  NONE_TEXT:0 "なし"
  GUI_SCALE_TOOLTIP:0 "この機能は実験的なものであり、x1.0に設定しないと問題が発生する可能性があります。"
- PAPACY_HARSH:0 "過酷な"
+ PAPACY_HARSH:0 "過酷"
  PAPACY_CONCILATORY:0 "調停的"
  PAPACY_PICK_GOLDEN_BULL:0 "金印勅書を選択する"
  SPAWN_EVENT_ONLY_DAYS:0 "$WHEN|Y$"
