--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -3444,7 +3444,7 @@
  EVTOPTB9489:0 "我々の悲しみは我々の正当性を証明している。"
  EVTNAME9490:0 "真のあなたを見て"
  EVTDESC9490:0 "彼女は振り返り、あなたを見つめてこう問いかけます。「ねえ、我が$MONARCH$、あなた、最近お祈りはしているのかしら？」この問いかけは、この何年もの間にドンドンと広がった二人の距離間を表した言葉でした。「私はあなたがお祈りをすべきだと思うわ。私はしているわよ、ほぼ毎晩ね。」あなたは笑っています。彼女は人として欠陥があるのですが、まだあなたの妻なのです。彼女がさらに近づいてきました。その顔にかすかな笑みが広がっていくのが見てとれます。「ねえ、我が$MONARCH$。そんなに笑って、あなた一体何がおかしいの？」"
- EVTOPTA9490:0 "お前が何を言おうとしてるか今わかったぞ。"
+ EVTOPTA9490:0 "お前が何を言おうとしているか今わかったぞ。"
  EVTOPTB9490:0 "経済はもう笑えるほど順調だよ！ハハッ！"
  EVTNAME3097:0 "反乱軍が蜂起！"
  EVTDESC3097:1 "裏切り者の軍隊は我々の帝国全体で反乱の旗を掲げており、[jackals_and_vultures_province.GetName]の反乱軍は、手ぐすね引いて機会を待っており、反乱で他の悪意ある行為に加わると考えられる。"
